--- a/index.qmd
+++ b/index.qmd
@@ -25,3 +25,15 @@ lines(shark_fin_2, type="o", pch=22, lty=2, col="red")
 title(main="Sharky", col.main="red", font.main=4)
 
 ```
+
+```{r}
+shark_x_2 <- c(1,1,2,5,6,6.5,6.5,10,12,11,12,10,7,6,5,1)
+shark_y_2 <- c(0,1,2,2,5,5,2,2,5,1,-1,0,0,-2,0,0)
+shark_eye_x <- c(1)
+shark_eye_y <- c(1)
+
+plot(shark_x_2, shark_y_2, type="o")
+line(shark_eye_x, shark_eye_y)
+
+
+```
